--- a/vignettes/alternatives.Rmd
+++ b/vignettes/alternatives.Rmd
@@ -4,7 +4,7 @@ author: "Carl Boettiger"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Piggyback Data atop your GitHub Repository!}
+  %\VignetteIndexEntry{alternatives}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
