--- a/README.Rmd
+++ b/README.Rmd
@@ -26,7 +26,8 @@ knitr::opts_chunk$set(
 
 # piggyback
 
-`piggyback` is basically a poor soul's [Git LFS](https://git-lfs.github.com/).  GitHub rejects commits containing files larger than 50 Mb.  Git LFS is not only expensive, it also [breaks GitHub's collaborative model](https://medium.com/@megastep/github-s-large-file-storage-is-no-panacea-for-open-source-quite-the-opposite-12c0e16a9a91). (Someone wants to submit a PR with a simple edit to your docs, they cannot fork)  Unlike Git LFS, `piggyback` doesn't take over your standard `git` client, it just perches comfortably on the shoulders of your existing GitHub API.  Data can be versioned by `piggyback`, but relative to `git LFS` versioning is less strict: uploads can be set as a new version or allowed to overwrite previously uploaded data.  `piggyback` works with both public and private repositories.  
+Because larger (> 50 MB) data files cannot easily be committed to git, a different approach is required to manage data associated with an analysis in a GitHub repository.  This package provides a simple work-around by allowing larger ([up to 2 GB per file](https://help.github.com/articles/distributing-large-binaries/)) data files to piggyback on a repository as assets attached to individual GitHub releases.  These files are not handled by git in any way, but instead are uploaded, downloaded, or edited directly by calls through the GitHub API. These data files can be versioned manually by creating different releases.  This approach works equally well with public or private repositories.  Data can be uploaded and downloaded programmatically from scripts. No authentication is required to download data from public repositories.
+
 
 
 
@@ -58,7 +59,7 @@ pb_download("data/mtcars.tsv.gz", repo = "cboettig/piggyback-tests", dest = temp
 ```
 
 
-Downloading from private repos or uploading to any repo requires authentication, so be sure to set a `GITHUB_TOKEN` (or `GITHUB_PAT`) environmental variable, or include the `.token` argument.  Omit the file name to download all attached objects. Omit the repository name to default to the current repository.  See [vignette](https://ropensci.github.io/piggyback/articles/intro.html) or function documentation for details.  
+Downloading from private repos or uploading to any repo requires authentication, so be sure to set a `GITHUB_TOKEN` (or `GITHUB_PAT`) environmental variable, or include the `.token` argument.  Omit the file name to download all attached objects. Omit the repository name to default to the current repository.  See [introductory vignette](https://ropensci.github.io/piggyback/articles/intro.html) or function documentation for details.  
 
 We can also upload data to any existing release (defaults to `latest`):
 
@@ -89,6 +90,27 @@ pb_download()
 ```
 
 
+
+
+## Git LFS and other alternatives
+
+
+`piggyback` acts like a poor soul's [Git LFS](https://git-lfs.github.com/). Git LFS is not only expensive, it also [breaks GitHub's collaborative model](https://medium.com/@megastep/github-s-large-file-storage-is-no-panacea-for-open-source-quite-the-opposite-12c0e16a9a91) -- basically if someone wants to submit a PR with a simple edit to your docs, they cannot fork your repository since that would otherwise count against your Git LFS storage.   Unlike Git LFS, `piggyback` doesn't take over your standard `git` client, it just perches comfortably on the shoulders of your existing GitHub API.  Data can be versioned by `piggyback`, but relative to `git LFS` versioning is less strict: uploads can be set as a new version or allowed to overwrite previously uploaded data.  
+
+## But what will GitHub think of this?
+
+[GitHub documentation](https://help.github.com/articles/distributing-large-binaries/) at the time of writing endorses the use of attachments to releases as a solution for distributing large files as part of your project:
+
+![](man/figures/github-policy.png)
+
+
+Of course, it will be up to GitHub to decide if this use of release attachments is acceptable in the long term. 
+
+<!--
+ When GitHub first came online, it was questioned whether committing binary objects and data to GitHub was acceptable or an abuse of a *source code* repository.  GitHub has since clearly embraced a inclusive notion of "repository" for containing far more than pure source.  I believe attaching data that is essential to replicating an analysis and within the 2 GB file limits enforced by GitHub to be in the same spirit of this inclusive notion, but GitHub may decide otherwise. 
+ -->
+
+Also see our [vignette comparing alternatives](https://ropensci.github.io/piggyback/articles/alternatives.html).
 
 ----
 
